# oyster

./: README.md  meson.build  meson_options.txt
include/: server.h
include/desktop/: desktop.h  output.h
include/input/: cursor.h  input.h  keyboard.h  seat.h
oyster/: main.c  meson.build  server.c
oyster/desktop/: desktop.c  output.c
oyster/input/: cursor.c  input.c  keyboard.c  seat.c
